--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <TITLE>HBNB</TITLE>
-</head>
-
-<body>
-    <h1>Number: {{ Number }}</h1>
-</body>
-
-</html>
+<HTML lang="en">
+    <HEAD>
+        <TITLE>HBNB</TITLE>
+    </HEAD>
+    <BODY>
+        <H1>Number: {{ Number }}</H1>
+    </BODY>
+</HTML>
